- if system provides it, dar uses linux capabilities to check for the ability
  to set file ownership when not run as root.
- removing dar-help tool used to build dar -h message, tool become useless
  for a long time now.
- added more specific -vm and -vt verbose options
- added support for microsecond timestamps (atime, mtime, ctime, birthtime)
- added support for lutime() to restore atime/mtimes of symlink on system
  that supports it.
- removed backward compatible API with old libdar 4.4.x
- simplified implementation of archive isolation made possible thanks to
  archive isolation evolution features brought by release 2.4.0.
- added feature: exclude-by-ea. Avoid saving inodes that have a particular
  EA set.
- added feature: comparison of an isolated catalogue with a filesystem,
  relying on embedded data CRC and inode metadata in absence of the saved
  data.
- This new archive format (version 9) holds the ciphering algorithm used
  at creation time, only the passphrase is required at reading time.

from 2.4.13 to 2.4.14
- limiting memory consumtion of the cache layer to stay below 10 MiB, under
  certain circumstances (very large archive), it could grow up to an insane
  value like 50% or the available RAM. reducing to 10 MiB does not impact
  performance in a noticable manner while it avoids system to swap out when
  the cache layer becomes huge.

from 2.4.12 to 2.4.13
- adding initialization value for two variables to avoid inappropriate
  warning when compiling with -Wall option
- reducing UNIX_PATH_MAX by the system when not defined from 108 to 104
  bytes to accommodate BSD systems
- fixing assignment operator of class criterium that was not returning
  any value as it should
- removing useless boolean expression that always succeeds in logical
  AND expression
- adding support for back-slash of quoting characters in DCF files
- fixed compilation issues with clang / FreeBSD, Thanks to Neil
  Darlow's server ;-)